--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
       "type": "module",
       "scripts": {
         "start": "node src/index.js",
-        "dev": "node --watch src/index.js"
+        "dev": "node --watch src/index.js",
+        "inspect": "npx -y @modelcontextprotocol/inspector node src/index.js"
       },
       "dependencies": {
         "@modelcontextprotocol/sdk": "^1.0.0",
